front 기초 업로드

--- a/frontRepo/admin/html/layout.html
+++ b/frontRepo/admin/html/layout.html
@@ -61,101 +61,43 @@
 
             <!-- 검색박스 예시 -->
             <div class="search_box">
-                <div class="type_1">
-                    <dl>
-                        <dt><label for="sel_01">대분류코드명</label></dt>
-                        <dd>
-                            <div class="form_box">
-                                <select class="sel_box">
-                                    <option value="">옵션명</option>
-                                </select>
-                            </div>
-                        </dd>
-                    </dl>
+                <div class="search_item">
+                    <label for="sel_01">검색어</label>
+                    <div class="form_box">
+                        <select class="sel_box">
+                            <option value="">옵션명</option>
+                        </select>
+                    </div>
                 </div>
-                <div class="type_2">
-                    <dl>
-                        <dt><label for="sel_02">대분류코드명</label></dt>
-                        <dd>
-                            <div class="form_box">
-                                <select class="sel_box">
-                                    <option value="">옵션명</option>
-                                </select>
-                            </div>
-                        </dd>
-                    </dl>
-                    <dl>
-                        <dt><label for="inp_01">대분류코드명</label></dt>
-                        <dd>
-                            <div class="form_box">
-                                <input type="text" id="inp_01">
-                            </div>
-                        </dd>
-                    </dl>
+                <div class="search_item">
+                    <label for="sel_01">검색어</label>
+                    <div class="form_box">
+                        <input type="text" id="inp_02">
+                    </div>
                 </div>
-                <div class="type_3">
-                    <dl>
-                        <dt><label for="sel_03">대분류코드명</label></dt>
-                        <dd>
-                            <div class="form_box">
-                                <select class="sel_box">
-                                    <option value="">옵션명</option>
-                                </select>
-                            </div>
-                        </dd>
-                    </dl>
-                    <dl>
-                        <dt><label for="inp_02">대분류코드명</label></dt>
-                        <dd>
-                            <div class="form_box">
-                                <input type="text" id="inp_02">
-                            </div>
-                        </dd>
-                    </dl>
-                    <dl>
-                        <dt><label for="inp_03">대분류코드명</label></dt>
-                        <dd>
-                            <div class="form_box">
-                                <input type="text" id="inp_03">
-                            </div>
-                        </dd>
-                    </dl>
+                <div class="search_item">
+                    <label for="sel_01">검색어</label>
+                    <div class="form_box">
+                        <input type="text" id="inp_02">
+                    </div>
                 </div>
-                <div class="type_4">
-                    <dl>
-                        <dt><label for="sel_04">코드명</label></dt>
-                        <dd>
-                            <div class="form_box">
-                                <select class="sel_box">
-                                    <option value="">옵션명</option>
-                                </select>
-                            </div>
-                        </dd>
-                    </dl>
-                    <dl>
-                        <dt><label for="inp_05">코드값</label></dt>
-                        <dd>
-                            <div class="form_box">
-                                <input type="text" id="inp_05" placeholder="검색어를 입력해 주세요.">
-                            </div>
-                        </dd>
-                    </dl>
-                    <dl>
-                        <dt><label for="inp_06">코드명</label></dt>
-                        <dd>
-                            <div class="form_box">
-                                <input type="text" id="inp_06" placeholder="검색어를 입력해 주세요.">
-                            </div>
-                        </dd>
-                    </dl>
-                    <dl>
-                        <dt><label for="inp_07">영문코드명</label></dt>
-                        <dd>
-                            <div class="form_box">
-                                <input type="text" id="inp_07" placeholder="검색어를 입력해 주세요.">
-                            </div>
-                        </dd>
-                    </dl>
+                <div class="search_item">
+                    <label for="sel_01">검색어</label>
+                    <div class="form_box">
+                        <input type="text" id="inp_02">
+                    </div>
+                </div>
+                <div class="search_item">
+                    <label for="sel_01">검색어</label>
+                    <div class="form_box">
+                        <input type="text" id="inp_02">
+                    </div>
+                </div>
+                <div class="search_item">
+                    <label for="sel_01">검색어</label>
+                    <div class="form_box">
+                        <input type="text" id="inp_02">
+                    </div>
                 </div>
             </div>
 
@@ -167,6 +109,230 @@
                 <div class="btn_box">
                     <button class="btn_black">검색</button>
                 </div>
+            </div>
+
+            <!-- 테이블 -->
+            <div class="tbl_box data mt40">
+                <table>
+                    <caption>회원가입 테이블</caption>
+                    <colgroup>
+                        <col width="">
+                        <col width="">
+                        <col width="">
+                        <col width="">
+                        <col width="">
+                        <col width="">
+                        <col width="">
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th scope="col">컬럼</th>
+                            <th scope="col">컬럼</th>
+                            <th scope="col">컬럼</th>
+                            <th scope="col">컬럼</th>
+                            <th scope="col">컬럼</th>
+                            <th scope="col">컬럼</th>
+                            <th scope="col">컬럼</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                        </tr>
+                        <tr>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                        </tr>
+                        <tr>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                        </tr>
+                        <tr>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                        </tr>
+                        <tr>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                        </tr>
+                        <tr>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                        </tr>
+                        <tr>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                        </tr>
+                        <tr>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                        </tr>
+                        <tr>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                        </tr>
+                        <tr>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                            <td>컬럼내용</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="btn_box_group right mt20">
+                <div class="btn_box">
+                    <a href="" class="btn_blue">수정</a>
+                </div>
+            </div>
+
+            <!-- 가로 테이블 -->
+            <div class="detail_box mt40">
+                <!-- 테이블 -->
+                <div class="tbl_group">
+            
+                    <div class="tbl_box">
+                        <table>
+                            <caption>회원가입 테이블</caption>
+                            <colgroup>
+                                <col width="15%"/>
+                                <col width="35%"/>
+                                <col width="15%"/>
+                                <col width="35%"/>
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <th scope="row"><label for="">아이디</label></th>
+                                    <td colspan="3">LUCKEEY@FASAFA.COM</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"><label for="inp_01">비밀번호</label></th>
+                                    <td>
+                                        <div class="form_box">
+                                            <input type="password" id="inp_01">
+                                        </div>
+                                    </td>
+                                    <th scope="row"><label for="inp_02">비밀번호 확인</label></th>
+                                    <td>
+                                        <div class="form_box">
+                                            <input type="password" id="inp_02">
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"><label for="inp_03">이름</label></th>
+                                    <td colspan="3">
+                                        <div class="form_box">
+                                            <input type="text" id="inp_03">
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"><label for="inp_04">소속</label></th>
+                                    <td colspan="3">케피코 CS</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"><label for="inp_05">부서</label></th>
+                                    <td colspan="3">
+                                        <div class="form_box">
+                                            <input type="text" id="inp_05">
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"><label for="inp_06">직책</label></th>
+                                    <td colspan="3">
+                                        <div class="form_box">
+                                            <input type="text" id="inp_06">
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"><label for="inp_07">전화번호</label></th>
+                                    <td colspan="3">
+                                        <div class="form_box_group tel">
+                                            <div class="form_box">
+                                                <select class="sel_box">
+                                                    <option value="">옵션명</option>
+                                                </select>
+                                            </div>
+                                            <span>-</span>
+                                            <div class="form_box">
+                                                <input type="text" id="">
+                                            </div>
+                                            <span>-</span>
+                                            <div class="form_box">
+                                                <input type="text" id="">
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"><label for="">권한</label></th>
+                                    <td colspan="3">CS 관리자</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    
+                </div>
+
+                <div class="btn_box_group right mt20">
+                    <div class="btn_box">
+                        <a href="" class="btn_blue">수정</a>
+                    </div>
+                </div>
+
             </div>
 
         </div>
