가이드화면 스크롤 안되는 현상 수정

--- a/frontRepo/admin/html/pub_guide.html
+++ b/frontRepo/admin/html/pub_guide.html
@@ -12,7 +12,7 @@
         * {margin: 0; padding: 0;}
         a {text-decoration: none; color: #333;}
         ul, ol, li {list-style: none;}
-        .wrap {flex-direction: column;}
+        .wrap {flex-direction: column; height: auto}
         header {
             display: flex;
             flex-direction: column;
