admin/index.html  수정 AJDGR-0007~AJDGR-0011 파일 생성

--- a/frontRepo/admin/index.html
+++ b/frontRepo/admin/index.html
@@ -198,45 +198,45 @@
                     division: '',
                     depth1: '공지사항 목록',
                     path: './html/AJDGR-0007.html',
-                    date: '',
-                    name: '',
-                    con: '',
+                    date: '2023-11-21',
+                    name: '양덕기',
+                    con: '완료',
                     etc: ''
                 },
                 {
                     division: '',
                     depth1: '공지사항 상세',
                     path: './html/AJDGR-0008.html',
-                    date: '',
-                    name: '',
-                    con: '',
+                    date: '2023-11-21',
+                    name: '양덕기',
+                    con: '완료',
                     etc: ''
                 },
                 {
                     division: '',
                     depth1: '공지사항 작성/수정',
                     path: './html/AJDGR-0009.html',
-                    date: '',
-                    name: '',
-                    con: '',
+                    date: '2023-11-21',
+                    name: '양덕기',
+                    con: '완료',
                     etc: ''
                 },
                 {
                     division: '',
                     depth1: '고객센터 목록',
                     path: './html/AJDGR-0010.html',
-                    date: '',
-                    name: '',
-                    con: '',
+                    date: '2023-11-21',
+                    name: '양덕기',
+                    con: '완료',
                     etc: ''
                 },
                 {
                     division: '',
                     depth1: '고객센터 상세',
                     path: './html/AJDGR-0011.html',
-                    date: '',
-                    name: '',
-                    con: '',
+                    date: '2023-11-21',
+                    name: '양덕기',
+                    con: '완료',
                     etc: ''
                 },
                 {
