[로그인 페이지 수정]

--- a/frontRepo/user/html/loginLayout.html
+++ b/frontRepo/user/html/loginLayout.html
@@ -42,7 +42,7 @@
 
         <!-- 버튼 -->
         <div class="btn_area">
-            <a href="">이메일 인증하기</a>
+            <a href="">로그인</a>
             <ul class="etc_btn">
                 <li><a href="">회원가입</a></li>
                 <li><a href="">아이디 찾기</a></li>
