[회원가입 화면] -살짝 수정

--- a/frontRepo/user/html/loginLayout2.html
+++ b/frontRepo/user/html/loginLayout2.html
@@ -33,7 +33,7 @@
                 <span class="txt_msg">전화번호 형식이 맞지 않습니다.</span>
             </div>
             <div class="form_box ico_tel">
-                <input type="password" name="" placeholder="gewgew">
+                <input type="password" name="" placeholder="전화번호를 입력해주세요.(숫자만 입력)">
                 <span class="txt_msg">아이디 중복확인이 완료되었습니다.</span>
             </div>
             <div class="form_box ico_pwd">
