메인 부분완성 및 아이콘추가

--- a/frontRepo/user/index.html
+++ b/frontRepo/user/index.html
@@ -123,7 +123,7 @@
                 {
                     division: '퍼블리싱 가이드',
                     depth1: '',
-                    path: './',
+                    path: './html/pub_guide.html',
                     date: '',
                     name: '',
                     con: '',
