--- a/frontRepo/user/html/UJDGR-0004.html
+++ b/frontRepo/user/html/UJDGR-0004.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>로그인/회원가입 레이아웃</title>
+    <title>로그인</title>
 
     <!-- css -->
     <link rel="stylesheet" href="../css/allCss.css">
@@ -32,37 +32,17 @@
                 <input type="password" name="" placeholder="비밀번호를 입력해주세요.">
                 <span class="txt_msg">전화번호 형식이 맞지 않습니다.</span>
             </div>
-            <div class="form_box ico_tel">
-                <input type="password" name="" placeholder="전화번호를 입력해주세요.(숫자만 입력)">
-                <span class="txt_msg">아이디 중복확인이 완료되었습니다.</span>
-            </div>
-            <div class="form_box ico_pwd">
-                <div class="inp_btn">
-                    <input type="text" name="" id="">
-                    <button>인증하기</button>
-                </div>
-                <span class="txt_msg">전화번호 형식이 맞지 않습니다.</span>
-            </div>
-            <div class="btn_box">
-                <button class="btn_black">이메일 인증하기</button>
-            </div>
-            <div class="form_box ico_pwd err">
-                <input type="password" name="" placeholder="hresgfer">
-                <span class="txt_msg">아이디 중복확인이 완료되었습니다.</span>
-            </div>
-            <div class="form_box ico_pwd err">
-                <input type="password" name="" placeholder="hresgfer">
-                <span class="txt_msg">아이디 중복확인이 완료되었습니다.</span>
-            </div>
-            <div class="form_box ico_pwd com">
-                <input type="password" name="" placeholder="hresgfer">
-                <span class="txt_msg">아이디 중복확인이 완료되었습니다.</span>
+            <div class="chk_box">
+                <span>
+                    <input type="checkbox" id="chk_01">
+                    <label for="chk_01">아이디 기억하기</label>
+                </span>
             </div>
         </div>
 
         <!-- 버튼 -->
         <div class="btn_area">
-            <a href="">이메일 인증하기</a>
+            <a href="">로그인</a>
             <ul class="etc_btn">
                 <li><a href="">회원가입</a></li>
                 <li><a href="">아이디 찾기</a></li>
