[UI구현] -회원가입 화면 구현 완 -이메일 인증 팝업 완

--- a/frontRepo/user/html/UJDGR-0005.html
+++ b/frontRepo/user/html/UJDGR-0005.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>아이디</title>
+    <title>아이디 찾기</title>
 
     <!-- css -->
     <link rel="stylesheet" href="../css/allCss.css">
@@ -38,14 +38,12 @@
                 <input type="password" name="" placeholder="전화번호">
                 <span class="txt_msg">전화번호 형식이 맞지 않습니다.</span>
             </div>
-            <div class="chk_box">
-                <span>
-                    <input type="checkbox" id="chk_01">
-                    <label for="chk_01">아이디 기억하기</label>
-                </span>
-            </div>
+            
         </div>
-
+        <div class="btn_box btn_group">
+            <button class="btn_black modal_open" data-target="#pop_email">이메일 인증하기</button>
+        </div>
+        
         <!-- 버튼 -->
         <div class="btn_area">
             <a href="">이메일 인증하기</a>
