--- a/frontRepo/user/html/kkhpop.html
+++ b/frontRepo/user/html/kkhpop.html
@@ -223,26 +223,64 @@
 <div id="pop_email" class="modal_bg">
     <div class="modal_box">
         <div class="modal_header">
-            <div class="rep_pos_pop"><h2>댓글/포스트 신고하기</h2></div>
+            <div class="rep_pos_pop"><h2>댓글 / 포스트 신고하기</h2></div>
             <button class="modal_close">닫기</button>
         </div>
         <hr>
-        <div class="writer_content"><h5>작성자 |</h5><br><h5>내용 |</h5>
+        <div class="writer_content"><h5>작성자&nbsp&nbsp|</h5><br><h5>내&nbsp&nbsp&nbsp&nbsp&nbsp용&nbsp&nbsp|</h5>
         </div>
         <hr>
         <div class="select_reason">사유선택</div>
         <div class="modal_container">
-            <button type="button">dd</button>
-            <p>fff</p>
-            <p>fff</p>
-            <p>fff</p>
-            <p>fff</p>
-            <p>fff</p>
-            <p>fff</p>
-            <p>fff</p>
-            <p>fff</p>
+            <ul>
+                <li class="list">
+                    <div class="check_area">
+                        <input type="radio" name="select" id="0" class="report_reason">
+                        <label class="reason_content"  for="0">스팸홍보/도배글입니다.</label>
+
+                    </div>
+                </li>
+                <li class="list">
+                    <div class="check_area">
+                        <input type="radio" name="select" id="1" class="report_reason">
+                        <label class="reason_content"  for="1">음란물입니다.</label>
+                    </div>
+                </li>
+                <li class="list">
+                    <div class="check_area">
+                        <input type="radio" name="select" id="2" class="report_reason">
+                        <label class="reason_content"  for="2">불법정보를 포함하고 있습니다.</label>
+                    </div>
+                </li>
+                <li class="list">
+                    <div class="check_area">
+                        <input type="radio" name="select" id="3" class="report_reason">
+                        <label class="reason_content" for="3">청소년에게 유해한 내용입니다.</label>
+                    </div>
+                </li>
+                <li class="list">
+                    <div class="check_area">
+                        <input type="radio" name="select" id="4" class="report_reason">
+                        <label class="reason_content"  for="4">욕설/생명경시/혐오/차별적 표현입니다.</label>
+                    </div>
+                </li>
+                <li class="list">
+                    <div class="check_area">
+                        <input type="radio" name="select" id="5" class="report_reason">
+                        <label class="reason_content"  for="5">개인정보 노출 게시물입니다.</label>
+                    </div>
+                </li>
+                <li class="list">
+                    <div class="check_area">
+                        <input type="radio" name="select" id="6" class="report_reason">
+                        <label class="reason_content"  for="6">불쾌한 표현이 있습니다.</label>
+                    </div>
+                </li>
+            </ul>
         </div>
-        <div class="detail_reason">ㅇㅇ</div>
+        <div class="detail_reason">
+            <input type="text" class="detail_content" placeholder="세부 내용 작성">
+        </div>
         <div class="modal_footer">
             <button class="modal_close btn_black">신고하기</button>
         </div>
