[UI 구현] index수정/블로그메인댓글추가

--- a/frontRepo/user/index.html
+++ b/frontRepo/user/index.html
@@ -162,36 +162,36 @@
                     division: '',
                     depth1: '회원가입 > 입력',
                     path: './html/UJDGR-0003.html',
-                    date: '',
-                    name: '',
-                    con: '',
+                    date: '2023-11-24',
+                    name: '박범렬',
+                    con: '완료',
                     etc: ''
                 },
                 {
                     division: '',
                     depth1: '로그인',
                     path: './html/UJDGR-0004.html',
-                    date: '',
-                    name: '',
-                    con: '',
+                    date: '2023-11-24',
+                    name: '박범렬',
+                    con: '완료',
                     etc: ''
                 },
                 {
                     division: '',
                     depth1: '아이디찾기 > 입력',
                     path: './html/UJDGR-0005.html',
-                    date: '',
-                    name: '',
-                    con: '',
+                    date: '2023-11-24',
+                    name: '박범렬',
+                    con: '완료',
                     etc: ''
                 },
                 {
                     division: '',
                     depth1: '아이디찾기 > 완료',
                     path: './html/UJDGR-0006.html',
-                    date: '',
-                    name: '',
-                    con: '',
+                    date: '2023-11-24',
+                    name: '박범렬',
+                    con: '완료',
                     etc: ''
                 },
                 {
@@ -199,7 +199,7 @@
                     depth1: '비밀번호 찾기 > 입력',
                     path: './html/UJDGR-0007.html',
                     date: '',
-                    name: '',
+                    name: '박범렬',
                     con: '',
                     etc: ''
                 },
@@ -208,7 +208,7 @@
                     depth1: '비밀번호 찾기 > 재설정',
                     path: './html/UJDGR-0008.html',
                     date: '',
-                    name: '',
+                    name: '박범렬',
                     con: '',
                     etc: ''
                 },
@@ -216,9 +216,9 @@
                     division: '',
                     depth1: '마이페이지',
                     path: './html/UJDGR-0009.html',
-                    date: '',
-                    name: '',
-                    con: '',
+                    date: '2023-11-24',
+                    name: '박범렬',
+                    con: '작업중',
                     etc: ''
                 },
                 {
@@ -263,7 +263,16 @@
                     path: './html/UJDGR-0014.html',
                     date: '',
                     name: '',
-                    con: '',
+                    con: '작업중',
+                    etc: ''
+                },
+                {
+                    division: '',
+                    depth1: '내 블로그 관리 > 구독한 블로그',
+                    path: './html/UJDGR-0016.html',
+                    date: '',
+                    name: '',
+                    con: '작업중',
                     etc: ''
                 },
                 {
@@ -272,7 +281,7 @@
                     path: './html/UJDGR-0015.html',
                     date: '',
                     name: '',
-                    con: '',
+                    con: '작업중',
                     etc: ''
                 },
                 {
@@ -281,61 +290,61 @@
                     path: './html/UJDGR-0016.html',
                     date: '',
                     name: '',
-                    con: '',
+                    con: '작업중',
                     etc: ''
                 },
                 {
                     division: '',
                     depth1: '고객센터 메인',
                     path: './html/UJDGR-0017.html',
-                    date: '',
-                    name: '',
-                    con: '',
+                    date: '2023-11-24',
+                    name: '양덕기',
+                    con: '완료',
                     etc: ''
                 },
                 {
                     division: '',
                     depth1: '고객센터 > 공지사항 > 목록',
                     path: './html/UJDGR-0018.html',
-                    date: '',
-                    name: '',
-                    con: '',
+                    date: '2023-11-24',
+                    name: '양덕기',
+                    con: '완료',
                     etc: ''
                 },
                 {
                     division: '',
                     depth1: '고객센터 > 공지사항 > 상세',
                     path: './html/UJDGR-0019.html',
-                    date: '',
-                    name: '',
-                    con: '',
+                    date: '2023-11-24',
+                    name: '양덕기',
+                    con: '완료',
                     etc: ''
                 },
                 {
                     division: '',
                     depth1: '고객센터 > 1:1문의',
                     path: './html/UJDGR-0020.html',
-                    date: '',
-                    name: '',
-                    con: '',
+                    date: '2023-11-24',
+                    name: '양덕기',
+                    con: '완료',
                     etc: ''
                 },
                 {
                     division: '',
                     depth1: '고객센터 > 1:1문의 > 문의하기',
                     path: './html/UJDGR-0021.html',
-                    date: '',
-                    name: '',
-                    con: '',
+                    date: '2023-11-24',
+                    name: '양덕기',
+                    con: '완료',
                     etc: ''
                 },
                 {
                     division: '',
                     depth1: '고객센터 > 1:1문의 > 상세보기',
                     path: './html/UJDGR-0022.html',
-                    date: '',
-                    name: '',
-                    con: '',
+                    date: '2023-11-24',
+                    name: '양덕기',
+                    con: '완료',
                     etc: ''
                 },
             ];
