--- a/frontRepo/user/html/UJDGR-0014.html
+++ b/frontRepo/user/html/UJDGR-0014.html
@@ -5,23 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>레이아웃</title>
 
-    <!-- swiper -->
-    <link rel="stylesheet" href="../css/swiper-bundle.css">
-    <script src="../js/swiper-bundle.min.js"></script>
-
     <!-- css -->
     <link rel="stylesheet" href="../css/allCss.css">
 
     <!-- js -->
     <script src="../js/common.js" defer></script>
 
-
 </head>
 <body>
-<!-- blog class 추가시 유저블로그 -->
-<!-- blog.layout1,2,3 레이아웃 변경 -->
-<!-- blog.skin1,2,3,4,5,6 스킨변경 -->
-<div class="wrap blog layout1 skin4">
+<div class="wrap blog_set">
 
     <!-- header -->
     <header>
@@ -188,144 +180,88 @@
     </header>
     <!-- //header -->
 
-    <!-- blog_header -->
-    <div class="blog_header">
-        <h1><a href="">유저가 지정한 블로그 제목</a></h1>
-    </div>
-    <!-- //blog_header -->
-
     <!-- main -->
     <main>
         <div class="inner">
 
-            <!-- blog_layout -->
-            <div class="blog_layout">
+            <div class="blog_set_layout">
 
-                <!-- 블로그 주인 정보 및 위젯 -->
-                <div class="blog_left">
-
-                    <!-- 유저 정보 -->
-                    <div class="blog_info">
-                        <div class="img"><img src="../images/content/img_main01.png" alt=""></div>
-                        <div class="info">
-                            <strong>블로그닉네임</strong>
-                            <span>dkdlel1234</span>
-                        </div>
-                        <div class="btn_area">
-                            <a href="" class="write">글쓰기</a>
-                            <a href="" class="set">블로그·관리</a>
-                        </div>
-                    </div>
-
-                    <!-- 카테고리 -->
-                    <div class="blog_category">
-                        <a href="" class="tit">
-                            <strong>카테고리</strong>
-                        </a>
-                        <ul>
-                            <li class="all_view"><a href=""><strong>전체보기</strong><span>(12)</span></a></li>
-                            <li class="category"><a href=""><strong>유저가 추가한 카테고리</strong><span>(3)</span></a></li>
-                            <li class="category"><a href=""><strong>유저가 추가한 카테고리</strong><span>(3)</span></a></li>
-                            <li class="line"></li>
-                            <li class="category"><a href=""><strong>유저가 추가한 카테고리</strong><span>(3)</span></a></li>
-                            <li class="category"><a href=""><strong>유저가 추가한 카테고리</strong><span>(3)</span></a></li>
-                        </ul>
-                    </div>
-
-                    <!-- 방문자 수 -->
-                    <div class="widget blog_count">
-                        <h4 class="tit">방문자 수</h4>
-                        <dl class="today">
-                            <dt>TODAY</dt>
-                            <dd>6,314</dd>
-                        </dl>
-                        <dl class="total">
-                            <dt>TOTAL</dt>
-                            <dd>33,268,691</dd>
-                        </dl>
-                    </div>
-
-                    <!-- 최근 댓글 -->
-                    <div class="widget blog_newreply">
-                        <h4 class="tit">최근댓글</h4>
-                        <ul>
-                            <li><a href="">속초 저녁식사 술안주 맛집 소개합니다속초 저녁식사 술안주 맛집 소개합니다</a></li>
-                            <li><a href="">속초 저녁식사 술안주 맛집 소개합니다속초 저녁식사 술안주 맛집 소개합니다</a></li>
-                            <li><a href="">속초 저녁식사 술안주 맛집 소개합니다속초 저녁식사 술안주 맛집 소개합니다</a></li>
-                            <li><a href="">속초 저녁식사 술안주 맛집 소개합니다속초 저녁식사 술안주 맛집 소개합니다</a></li>
-                            <li><a href="">속초 저녁식사 술안주 맛집 소개합니다속초 저녁식사 술안주 맛집 소개합니다</a></li>
-                        </ul>
-                    </div>
-
-                    <!-- 시계 -->
-                    <div class="widget blog_clock">
-                        <h4 class="tit">시계</h4>
-                        <span class="time">
-                            <strong class="ampm">오전</strong>
-                            <span class="clock">12:31</span>
-                        </span>
-                    </div>
-
-                    <!-- 구독 블로그 -->
-                    <div class="widget blog_subscribeblog">
-                        <a href="" class="tit">
-                            <strong>구독 블로그</strong>
-                        </a>
-                        <ul>
-                            <li><a href="">누구누구님의 블로그</a></li>
-                            <li><a href="">디스러브</a></li>
-                            <li><a href="">1등 취업정보 블로그입니다</a></li>
-                            <li><a href="">누구누구님의 블로그</a></li>
-                            <li><a href="">디스러브</a></li>
-                            <li><a href="">1등 취업정보 블로그입니다</a></li>
-                        </ul>
-                    </div>
-
-                    <!-- 지도 -->
-                    <div class="widget blog_map">
-                        <h4 class="tit">지도</h4>
-                        <div>
-                            <div id="daumRoughmapContainer1700745953734" class="root_daum_roughmap root_daum_roughmap_landing"></div>
-                            <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
-                            <script charset="UTF-8">
-                                new daum.roughmap.Lander({
-                                    "timestamp" : "1700745953734",
-                                    "key" : "2gxwj",
-                                    "mapWidth" : "200",
-                                    "mapHeight" : "200"
-                                }).render();
-                            </script>
-                        </div>
-                    </div>
-
+                <div class="left">
+                    <dl>
+                        <dt>기본정보 관리</dt>
+                        <dd>
+                            <ul>
+                                <li><a href="">블로그 정보</a></li>
+                                <li><a href="">기본정보 관리</a></li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl>
+                        <dt>기본정보 관리</dt>
+                        <dd>
+                            <ul>
+                                <li><a href="">구독한 블로그</a></li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl>
+                        <dt>기본정보 관리</dt>
+                        <dd>
+                            <ul>
+                                <li><a href="">스킨 선택</a></li>
+                                <li><a href="">레이아웃-위젯 설정</a></li>
+                            </ul>
+                        </dd>
+                    </dl>
                 </div>
 
-                <!-- 포스트 목록 및 내용 및 댓글 -->
-                <div class="blog_right">
+                <div class="right">
+                    <h2>블로그 정보</h2>
 
-                    <!-- 블로그 메인 -->
-                    <div class="blog_main">
+                    <div class="content">
 
-                        <!-- 메인이 없을시 -->
-                        <div class="no_main">
-                            <strong>설정된 블로그 메인이 없습니다.</strong>
-                            <span>블로그 메인을 꾸며보세요!</span>
-
-                            <a href="">메인 꾸미기</a>
+                        <div class="data_dl">
+                            <dl>
+                                <dt>블로그명</dt>
+                                <dd>
+                                    <div class="inp_box">
+                                        <input type="text">
+                                        <span>한글, 영문, 숫자 혼용가능 (한글기준 25자 이내)</span>
+                                    </div>
+                                </dd>
+                            </dl>
+                            <dl>
+                                <dt>블로그 닉네임</dt>
+                                <dd>
+                                    <div class="inp_box">
+                                        <input type="text">
+                                        <span>한글, 영문, 숫자 혼용가능 (한글기준 25자 이내)</span>
+                                    </div>
+                                </dd>
+                            </dl>
+                            <dl>
+                                <dt>블로그 프로필 이미지</dt>
+                                <dd>
+                                    <div class="profile_box">
+                                        <div class="img"><img src="../images/ico/ico_profile.svg" alt=""></div>
+                                        <div class="profile_btn">
+                                            <button>등록</button>
+                                            <span class="txt">프로필 이미지는 가로 200px, 세로 200px로 생성됩니다.</span>
+                                        </div>
+                                    </div>
+                                </dd>
+                            </dl>
                         </div>
 
-                        <!-- 있을시 -->
-                        <div class="blog_main_content">
-                            유저가 작성한내용이 나옵니다.<br/>
-                            DB에서 불러와야함
+                        <div class="blog_set_btn">
+                            <a href="">저장</a>
                         </div>
-                        
+
                     </div>
 
                 </div>
 
             </div>
-            <!-- //blog_layout -->
 
         </div>
     </main>
