[UI 구현] -로그인, 회원가입, 아디찾기, 비번찾기 전부다 완료

--- a/frontRepo/user/html/UJDGR-0007.html
+++ b/frontRepo/user/html/UJDGR-0007.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>아이디 찾기</title>
+    <title>비밀번호 찾기</title>
 
     <!-- css -->
     <link rel="stylesheet" href="../css/allCss.css">
@@ -24,7 +24,7 @@
         </div>
 
         <div>
-            <h1>아이디 찾기</h1>
+            <h1>비밀번호 찾기</h1>
         </div>
 
         
@@ -35,8 +35,8 @@
                 <input type="text" name="" placeholder="이름">
                 <span class="txt_msg">아이디 중복확인이 완료되었습니다.</span>
             </div>
-            <div class="form_box ico_tel">
-                <input type="password" name="" placeholder="전화번호">
+            <div class="form_box ico_id">
+                <input type="password" name="" placeholder="아이디">
                 <span class="txt_msg">전화번호 형식이 맞지 않습니다.</span>
             </div>
             
@@ -50,7 +50,7 @@
             </div>
             <ul class="etc_btn">
                 <li><a href="">회원가입</a></li>
-                <li><a href="">비밀번호 찾기</a></li>
+                <li><a href="">아이디 찾기</a></li>
             </ul>
         </div>
 
