--- a/frontRepo/admin/html/AJDGR-0015.html
+++ b/frontRepo/admin/html/AJDGR-0015.html
@@ -96,13 +96,41 @@
                                     <th scope="row"><label for="">전화번호</label></th>
                                     <td>전화번호</td>
                                     <th scope="row"><label for="">탈퇴여부</label></th>
-                                    <td>Y</td>
+                                    <td>
+                                        <div class="form_box">
+                                            <select class="sel_box">
+                                                <option value="">N</option>
+                                                <option value="">Y</option>
+                                            </select>
+                                        </div>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <th scope="row"><label for="">가입일자</label></th>
                                     <td>2023.11.26 00:00</td>
                                     <th scope="row"><label for="">탈퇴일자</label></th>
                                     <td>2023.11.26 00:00</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"><label for="" name="">로그인정지</label></th>
+                                    <td>
+                                        <div class="form_box">
+                                            <select class="sel_box">
+                                                <option value="">-</option>
+                                                <option value="">3일</option>
+                                                <option value="">5일</option>
+                                            </select>
+                                        </div>
+                                    </td>
+                                    <th scope="row"><label for="">제재여부</label></th>
+                                    <td>
+                                        <div class="form_box">
+                                            <select class="sel_box">
+                                                <option value="">N</option>
+                                                <option value="">Y</option>
+                                            </select>
+                                        </div>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -115,7 +143,7 @@
                         <a href="" class="btn_grayline">뒤로가기</a>
                     </div>
                     <div class="btn_box">
-                        <a href="" class="btn_blue">정보수정완료</a>
+                        <a href="" class="btn_blue">수정완료</a>
                     </div>
                 </div>
 
